--- a/package.json
+++ b/package.json
@@ -1,7 +1,18 @@
 {
+  "name": "my-app",
+  "version": "1.0.0",
+  "scripts": {
+    "test": "mocha"
+  },
   "dependencies": {
     "csv-parser": "^3.0.0",
     "express": "^4.19.2",
     "fs": "^0.0.1-security"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-http": "^4.4.0",
+    "mocha": "^10.4.0",
+    "node-fetch": "^3.3.2"
   }
 }
